--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Clone repo
-      uses: actions/checkout@v4
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Synch GitHub and HF
       env:
         HF_TOKEN: ${{secrets.HUGGINGFACE_ACCESS_TOKEN}}
