--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ annotated-types==0.7.0
 anyio==4.4.0
 astunparse==1.6.3
 attrs==23.2.0
+beautifulsoup4==4.12.3
 certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -33,10 +34,10 @@ httpx==0.27.0
 huggingface-hub==0.23.4
 idna==3.7
 importlib_resources==6.4.0
+iniconfig==2.0.0
 Jinja2==3.1.4
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
-keras==3.3.3
 kiwisolver==1.4.5
 libclang==18.1.1
 Markdown==3.6
@@ -45,14 +46,29 @@ MarkupSafe==2.1.5
 matplotlib==3.9.0
 mdurl==0.1.2
 ml-dtypes==0.3.2
+mpmath==1.3.0
 namex==0.0.8
+networkx==3.3
 numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.5.40
+nvidia-nvtx-cu12==12.1.105
 opt-einsum==3.3.0
 optree==0.11.0
 orjson==3.10.5
 packaging==24.1
 pandas==2.2.2
 pillow==10.3.0
+pluggy==1.5.0
 protobuf==4.25.3
 pydantic==2.7.4
 pydantic_core==2.18.4
@@ -76,18 +92,20 @@ semantic-version==2.10.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
+soupsieve==2.5
 starlette==0.37.2
+sympy==1.12.1
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
-tensorflow==2.16.1
-tensorflow-io-gcs-filesystem==0.37.0
 termcolor==2.4.0
-tf_keras==2.16.0
 tokenizers==0.19.1
+tomli==2.0.1
 tomlkit==0.12.0
 toolz==0.12.1
+torch==2.3.1
 tqdm==4.66.4
 transformers==4.41.2
+triton==2.3.1
 typer==0.12.3
 typing_extensions==4.12.2
 tzdata==2024.1
